# GRIDinamico

./: .env  README.md  TestingTomTom.sh  bench.sh  bench_summary.sh  fsd_zoom.html  h3_commands.py  littlecommands.txt  madgrid.pid  plot_bench.py  run-madgrid.sh
.devin/: wiki.json
ClusterizadorTest/: s2_orders_2000.geojson  stressTest.py
MotorRust/data/: od_today.csv
MotorRust/src/: clusterizador.rs  h3grid.rs  main.rs
MotorRust/src/models/: h3types.rs  mod.rs
MotorRust/src/server/: mod.rs
Rust/src/: main.rs
Rust/src/data/: mod.rs
Rust/src/tools/: mod.rs
bench_out_20250826_153336/: curl_timings.txt  hey_res10.txt  hey_res10_refine.txt  hey_res7.txt  hey_res7_refine.txt  hey_res9.txt  hey_res9_refine.txt  idle.txt  summary.txt
madgrid/: ._target  Cargo.toml
madgrid/data/: hex_road_map_logrono.csv
madgrid/src/: api.rs  carga.rs  clusterizador.rs  fetch.rs  grid.rs  h3grid.rs  incid.rs  main.rs  s2grid.rs  trafico.rs  types.rs  utm.rs
madgrid/src/data/: carga.rs  incid.rs  trafico.rs
madgrid/src/models/: h3types.rs  types.rs
madgrid/src/server/: api.rs
madgrid/src/tools/: utm.rs
madgrid/web/: index.html
