[package]
name = "madgrid"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
bytes = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

# Async + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "stream", "json"] }

# Web API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-br", "compression-gzip", "cors", "fs"] }

# Geo
geo = { version = "0.28", default-features = false, features = ["use-serde"] }
geojson = "0.24"
rstar = "0.11"
h3o = { version = "0.5", features = ["geo"] }


# Parsing archivos
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }

# Utilidades
itertools = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }